project/stage/semantic_tests/accept/shadow_func_name.ul
void main () {
    int main;
}

boolean foo() {
    boolean foo;
}

string bar(string bar) {
    return "";
}


char goink(string bar) {
    return 'c';
}
