project/stage/semantic_tests/reject/bool_assign_int_arr.ul
void main() {
    int [1] arr;
    arr[0] = true;
}
